--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.21"
   }
 }
